--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 alabaster==0.7.12
+anyio==4.4.0
 appdirs==1.4.4
-apturl==0.5.2
+appnope==0.1.4
 argon2-cffi==21.1.0
-attrs==21.2.0
-Babel==2.8.0
+arrow==1.3.0
+asttokens==2.4.1
+async-lru==2.0.4
+attrs==23.2.0
+Babel==2.15.0
 backcall==0.2.0
 bcrypt==3.2.0
 beautifulsoup4==4.10.0
@@ -11,74 +15,76 @@ beniget==0.4.1
 bleach==4.1.0
 blinker==1.7.0
 bokeh==3.4.1
-brial==1.0.2
-Brlapi==0.8.3
 Brotli==1.0.9
 certifi==2020.6.20
 cffi==1.16.0
 chardet==4.0.0
 charset-normalizer==3.3.2
-chrome-gnome-shell==0.0.0
 click==8.1.7
 colorama==0.4.4
-command-not-found==0.3
 contourpy==1.2.1
 cryptography==42.0.7
-cupshelpers==1.0
 cycler==0.11.0
-cypari2==2.1.2
 cysignals==1.11.4
 Cython==0.29.28
-dbus-python==1.2.18
 debugpy==1.8.1
 decorator==4.4.2
-defer==1.0.6
 defusedxml==0.7.1
 distlib==0.3.8
 distro==1.7.0
-distro-info==1.1+ubuntu0.2
 docutils==0.17.1
-duplicity==0.8.21
 entrypoints==0.4
 exceptiongroup==1.1.3
+executing==2.0.1
 fasteners==0.14.1
+fastjsonschema==2.20.0
 filelock==3.15.1
 Flask==3.0.1
 fonttools==4.29.1
-fpylll==0.5.2.dev0
+fqdn==1.5.1
 fs==2.4.12
 future==0.18.2
 gast==0.5.2
 gmpy2==2.1.2
 gTTS==2.5.0
+h11==0.14.0
 html5lib==1.1
+httpcore==1.0.5
 httplib2==0.20.2
+httpx==0.27.0
 idna==3.3
 imagesize==1.3.0
-importlib-metadata==4.6.4
+importlib_metadata==7.2.1
 iniconfig==2.0.0
 ipykernel==6.7.0
 ipython==7.31.1
-ipython_genutils==0.2.0
+ipython-genutils==0.2.0
 ipywidgets==6.0.0
+isoduration==20.11.0
 itsdangerous==2.1.2
 jedi==0.18.0
 jeepney==0.7.1
 Jinja2==3.1.3
+json5==0.9.25
+jsonpointer==3.0.0
 jsonschema==3.2.0
+jsonschema-specifications==2023.12.1
 jupyter-client==7.1.2
-jupyter-core==4.9.1
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_core==5.7.2
+jupyter_server==2.14.1
+jupyter_server_terminals==0.5.3
+jupyterlab==4.2.2
 jupyterlab-pygments==0.1.2
+jupyterlab_server==2.27.2
 keyring==23.5.0
 kiwisolver==1.3.2
-language-selector==0.1
 launchpadlib==1.10.16
 lazr.restfulclient==0.14.4
 lazr.uri==1.0.6
 lockfile==0.12.2
-louis==3.20.0
 lxml==4.8.0
-lz4==3.1.3+dfsg
 macaroonbakery==1.3.1
 Mako==1.1.3
 Markdown==3.3.6
@@ -87,9 +93,11 @@ matplotlib==3.5.1
 matplotlib-inline==0.1.3
 memory-allocator==0.1.2
 meson==0.61.2
+mistune==0.8.4
 monotonic==1.6
 more-itertools==8.10.0
-mpmath==0.0.0
+mpmath==1.3.0
+mysql-connector-python==8.4.0
 nbclient==0.5.6
 nbconvert==6.4.0
 nbformat==5.1.3
@@ -97,9 +105,12 @@ nest-asyncio==1.5.4
 netifaces==0.11.0
 networkx==2.4
 notebook==6.4.8
-numpy==1.26.4
+notebook_shim==0.2.4
+numpy==1.24.4
 oauthlib==3.2.0
 olefile==0.46
+overrides==7.7.0
+package-name==0.1
 packaging==23.1
 pandas==2.2.2
 pandocfilters==1.5.0
@@ -108,7 +119,6 @@ parso==0.8.1
 pdf2image==1.17.0
 pdfminer.six==20231228
 pdfplumber==0.11.0
-pdftables-api @ git+https://github.com/pdftables/python-pdftables-api.git@60cdb2c22d28734a4276256ea0ea551c669515e7
 pexpect==4.8.0
 pickleshare==0.7.5
 pillow==10.3.0
@@ -116,19 +126,17 @@ pkgconfig==1.5.5
 platformdirs==4.2.2
 pluggy==1.3.0
 ply==3.11
-pplpy==0.8.7
 primecountpy==0.1.0
 prometheus-client==0.9.0
 prompt-toolkit==3.0.28
 protobuf==3.12.4
 psutil==5.9.0
 ptyprocess==0.7.0
+pure-eval==0.2.2
 py==1.10.0
-pycairo==1.20.1
 pycparser==2.22
 pycups==2.0.1
 Pygments==2.11.2
-PyGObject==3.42.1
 PyJWT==2.3.0
 pymacaroons==0.13.0
 PyNaCl==1.5.0
@@ -139,10 +147,9 @@ pyRFC3339==1.1
 pyrsistent==0.18.1
 pytesseract==0.3.10
 pytest==7.4.0
-python-apt==2.4.0+ubuntu3
 python-dateutil==2.9.0.post0
 python-dbusmock==0.27.5
-python-debian==0.1.43+ubuntu1.1
+python-json-logger==2.0.7
 python-xlib==0.29
 pythran==0.10.0
 pytz==2024.1
@@ -150,45 +157,53 @@ pyudev==0.22.0
 pyxdg==0.27
 PyYAML==5.4.1
 pyzmq==22.3.0
+referencing==0.35.1
 reportlab==3.6.8
 requests==2.31.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
 roman==3.3
-rpy2==3.4.5
-sagemath-standard==9.5
-sagenb-export==3.2
+rpds-py==0.18.1
 scipy==1.8.0
 SecretStorage==3.3.1
 Send2Trash==1.8.1b0
 six==1.16.0
+sniffio==1.3.1
 snowballstemmer==2.2.0
 soupsieve==2.3.1
 Sphinx==4.3.2
+sphinxcontrib-applehelp==1.0.8
+sphinxcontrib-devhelp==1.0.6
+sphinxcontrib-htmlhelp==2.0.5
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.7
+sphinxcontrib-serializinghtml==1.1.10
+stack-data==0.6.3
 sympy==1.9
-systemd-python==234
 terminado==0.13.1
 testpath==0.5.0
+tinycss2==1.3.0
 toml==0.10.2
 tomli==2.0.1
 tornado==6.4.1
 tox==3.21.4
-traitlets==5.1.1
+traitlets==5.14.3
+types-python-dateutil==2.9.0.20240316
+typing_extensions==4.12.2
 tzdata==2024.1
 tzlocal==2.1
-ubuntu-drivers-common==0.0.0
-ubuntu-pro-client==8001
 ufoLib2==0.13.1
-ufw==0.36.1
-unattended-upgrades==0.1
 unicodedata2==14.0.0
+uri-template==1.3.0
 urllib3==1.26.5
-usb-creator==0.3.7
 virtualenv==20.26.2
 wadllib==1.3.6
 wcwidth==0.2.5
+webcolors==24.6.0
 webencodings==0.5.1
+websocket-client==1.8.0
 Werkzeug==3.0.1
 widgetsnbextension==2.0.0
-xdg==5
-xkit==0.0.0
+xdg==5.0.0
 xyzservices==2024.6.0
 zipp==1.0.0
