--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 bokeh==3.5.0
 bokeh_sampledata==2024.2
 contourpy==1.2.1
+cycler==0.12.1
+fonttools==4.53.1
 icalendar==5.0.13
 Jinja2==3.1.4
+kiwisolver==1.4.5
 MarkupSafe==2.1.5
+matplotlib==3.9.0
 numpy==2.0.0
 packaging==24.1
 pandas==2.2.2
 pillow==10.4.0
+pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
